fix(material/list): remove unnecessary high contrast styles
Removes some styles from the list meant for high contrast mode that we inherited from MDC. They aren't necessary, because we have our own way of handling high contrast styles and they were actively making `mat-option` worse by adding extra borders in several cases.

--- a/src/material/list/list.scss
+++ b/src/material/list/list.scss
@@ -116,6 +116,9 @@ a.mdc-list-item--activated {
   content: '';
   opacity: 0;
   pointer-events: none;
+
+  // This comes up in some internal implementations.
+  border-radius: inherit;
 }
 
 // The MDC-based list items already use the `::before` pseudo element for the standard
